[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/respawn_point.gd" type="Script" id=1]
[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/respawn.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.2154, 26.3871 )

[node name="respawn_point" type="Node2D"]
script = ExtResource( 1 )

[node name="trigger_zone" parent="." instance=ExtResource( 2 )]

[node name="shape" parent="trigger_zone" index="0"]
shape = SubResource( 1 )

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="start_wait_time" type="Timer" parent="."]

[node name="wait_time" type="Timer" parent="."]
wait_time = 3.0

[node name="future_wait_time" type="Timer" parent="."]
wait_time = 1.5

[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]
[connection signal="timeout" from="start_wait_time" to="." method="_on_start_wait_time_timeout"]
[connection signal="timeout" from="wait_time" to="." method="_on_wait_time_timeout"]
[connection signal="timeout" from="future_wait_time" to="." method="_on_future_wait_time_timeout"]

[editable path="trigger_zone"]
